--- a/index.html
+++ b/index.html
@@ -53,52 +53,125 @@
     <div id="root"></div>
     <script>
 (function () {
-  function tryInsert() {
-    // Find the "Extras" heading
+  function isLeaf(el) {
+    return el && el.children && el.children.length === 0;
+  }
+
+  function findExtrasCard() {
     const headings = Array.from(document.querySelectorAll("h1,h2,h3,h4"));
     const extrasHeading = headings.find(h => h.textContent.trim().toLowerCase() === "extras");
-    if (!extrasHeading) return false;
+    if (!extrasHeading) return null;
 
-    // Find the card/section that contains it
+    // card that contains the Extras title
     const card = extrasHeading.closest("section,div");
-    if (!card) return false;
+    if (!card) return null;
 
-    // Find an existing label & price to clone (keeps same styling)
-    const nodes = Array.from(card.querySelectorAll("*"));
-    const labelNode = nodes.find(el =>
-      el.children.length === 0 && /Body Scrub|Table Shower|Cupping/i.test(el.textContent)
+    // find the grid/container that holds the items (Body Scrub/Table Shower/Cupping)
+    const containers = Array.from(card.querySelectorAll("div"));
+    const list = containers.find(d =>
+      d.textContent.includes("Body Scrub") &&
+      d.textContent.includes("Table Shower") &&
+      d.textContent.includes("Cupping")
     );
-    const priceNode = nodes.find(el =>
-      el.children.length === 0 && /\+\$10|\+\$20/i.test(el.textContent)
-    );
-    if (!labelNode || !priceNode || !labelNode.parentElement) return false;
 
-    // Prevent duplicates
-    if (card.textContent.toLowerCase().includes("coconut oil")) return true;
+    return { card, list };
+  }
 
-    const parent = labelNode.parentElement;
+  function getLabelEl(list, label) {
+    return Array.from(list.querySelectorAll("*"))
+      .find(el => isLeaf(el) && el.textContent.trim() === label);
+  }
 
-    const newLabel = labelNode.cloneNode(true);
-    newLabel.textContent = "Coconut Oil";
+  function getPriceAfter(list, labelEl) {
+    if (!labelEl) return null;
 
-    const newPrice = priceNode.cloneNode(true);
-    newPrice.textContent = "+$10";
+    // Walk forward in DOM order and pick the next leaf that looks like +$..
+    const all = Array.from(list.querySelectorAll("*")).filter(isLeaf);
+    const i = all.indexOf(labelEl);
+    if (i < 0) return null;
 
-    // Insert at the beginning of the existing list
-    parent.insertBefore(newLabel, labelNode);
-    parent.insertBefore(newPrice, labelNode);
+    for (let k = i + 1; k < Math.min(i + 6, all.length); k++) {
+      if (/^\+\$\d+/.test(all[k].textContent.trim())) return all[k];
+    }
+    return null;
+  }
+
+  function ensureCoconutOil(list) {
+    let coconutLabel = getLabelEl(list, "Coconut Oil");
+    let coconutPrice = coconutLabel ? getPriceAfter(list, coconutLabel) : null;
+
+    if (coconutLabel && coconutPrice) return { coconutLabel, coconutPrice };
+
+    // Clone Body Scrub label + its +$10 price to preserve styling
+    const bodyScrubLabel = getLabelEl(list, "Body Scrub");
+    const bodyScrubPrice = getPriceAfter(list, bodyScrubLabel);
+    if (!bodyScrubLabel || !bodyScrubPrice) return null;
+
+    coconutLabel = bodyScrubLabel.cloneNode(true);
+    coconutLabel.textContent = "Coconut Oil";
+
+    coconutPrice = bodyScrubPrice.cloneNode(true);
+    coconutPrice.textContent = "+$10";
+
+    // Insert Coconut Oil as the very first pair in the grid
+    list.insertBefore(coconutPrice, bodyScrubLabel);
+    list.insertBefore(coconutLabel, coconutPrice);
+
+    return { coconutLabel, coconutPrice };
+  }
+
+  function reorderExactlyLikeScreenshot(list) {
+    const c = ensureCoconutOil(list);
+    if (!c) return false;
+
+    const bodyScrubLabel = getLabelEl(list, "Body Scrub");
+    const bodyScrubPrice = getPriceAfter(list, bodyScrubLabel);
+
+    const tableShowerLabel = getLabelEl(list, "Table Shower");
+    const tableShowerPrice = getPriceAfter(list, tableShowerLabel);
+
+    const cuppingLabel = getLabelEl(list, "Cupping");
+    const cuppingPrice = getPriceAfter(list, cuppingLabel);
+
+    if (!bodyScrubLabel || !bodyScrubPrice || !tableShowerLabel || !tableShowerPrice || !cuppingLabel || !cuppingPrice) {
+      return false;
+    }
+
+    // Force exact order:
+    // Coconut Oil +$10 | Body Scrub +$10 | Table Shower +$10 | Cupping +$20
+    const desired = [
+      c.coconutLabel, c.coconutPrice,
+      bodyScrubLabel, bodyScrubPrice,
+      tableShowerLabel, tableShowerPrice,
+      cuppingLabel, cuppingPrice
+    ];
+
+    // Remove them first so we can re-insert cleanly in correct order
+    desired.forEach(n => n.parentNode && n.parentNode.removeChild(n));
+
+    // Re-insert at the beginning of the list container
+    let anchor = list.firstChild;
+    desired.forEach(n => {
+      list.insertBefore(n, anchor);
+      anchor = n.nextSibling;
+    });
 
     return true;
   }
 
-  // Wait for the React app to render, then inject
+  function run() {
+    const found = findExtrasCard();
+    if (!found || !found.list) return false;
+    return reorderExactlyLikeScreenshot(found.list);
+  }
+
+  // Wait for the app to render
   const obs = new MutationObserver(() => {
-    if (tryInsert()) obs.disconnect();
+    if (run()) obs.disconnect();
   });
   obs.observe(document.body, { childList: true, subtree: true });
 
-  // Also try once immediately
-  tryInsert();
+  run();
 })();
 </script>
   </body>
